# BrickMoney

./: .gitignore  .gitmodules  README.md
Tools/Win/: UnpackWixToolset.bat
doc/Version_0.2/: BrickMoneyDB-Design.odg  Features_Version_0.2.txt
src/: CMakeLists.txt  GenerateSln.bat
src/Applications/BrickMoney/: .gitignore  BrickMoneySettings.cpp  BrickMoneySettings.h  CMakeLists.txt  DataSource.cpp  DataSource.h  DatePicker.qml  DialogButtonBoxTest.qml  DoubleSpinBox.qml  GenerateSln.bat  LegoList.qml  LegoSet.cpp  LegoSet.h  LegoSetIOManager.cpp  LegoSetIOManager.h  LegoSetInfoGenerator.cpp  LegoSetInfoGenerator.h  LegoSetModel.cpp  LegoSetModel.h  LegoSetRecord.cpp  LegoSetRecord.h  LegoSetTableData.cpp  LegoSetTableData.h  LegoSetTableData_p.h  LegoSetTableModel.cpp  LegoSetTableModel.h  LegoTable.qml  ListViewScrollbars.qml  Logging.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewLegoSetDialog.qml  NewLegoSetDialogPrototype.qml  TableModel.cpp  TableModel.h  bm_german.ts  brickmoney.qph  main.cpp  main.qml  (+2 more)
src/Applications/BrickMoney/Images/: Images.qrc
src/Applications/BrickMoney/images/: BrickMoney.rc
src/Applications/BrickMoney/qml/: ForSale.qml  InStock.qml  LegoList.qml  LegoTable.qml  Overview.qml  Sold.qml  main.qml  qml.qrc
src/Applications/BrickMoney/qml/helper/: BrickMoneyFileDialog.qml  BrickMoneyRoundButton.qml  BrickMoneyStyle.qml  DialogToConfirmTheDeletion.qml  ImportDialog.qml  LegoTable.qml  NewLegoSetDialog.qml  SortableColumnHeading.qml
src/Applications/BrickMoney/qml/sandbox/: DatePickerTest.qml
src/Applications/BrickMoney/src/: BrickMoneyDataManager.cpp  BrickMoneyProject.cpp  BrickMoneyProject.h  BrickMoneySettings.cpp  BrickMoneySettings.h  BrickMoneyTrans.cpp  BrickMoneyTrans.h  LegoSet.cpp  LegoSet.h  LegoSetDataSource.cpp  LegoSetDataSource.h  LegoSetInfoGenerator.cpp  LegoSetInfoGenerator.h  LegoSetSortFilterTableModel.cpp  LegoSetSortFilterTableModel.h  LegoSetTableModel.cpp  LegoSetTableModel.h  QmlValuePreview.h  main.cpp
src/Applications/BrickMoneyDesktop/: CMakeLists.txt  LegoSetImportDialog.cpp  LegoSetImportDialog.h  LegoSetImportDialog.ui
src/Applications/BrickMoneyDesktop/images/: Images.qrc  brickMoney_splashscreen.pdn
src/Applications/BrickMoneyDesktop/installer/example/: BrickMoneyTest.bat  BrickMoneyTest.wxs  example.bat  example.wxs
src/Applications/BrickMoneyDesktop/installer/script/: BrickMoneyInstallerBanner.pdn  BrickMoneyInstallerDialog.pdn  BrickMoneySetup.wxs  createInstaller.bat
src/Applications/BrickMoneyDesktop/src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  BrickMoneyTranslator.cpp  BrickMoneyTranslator.h  CalendarDelegate.cpp  CalendarDelegate.h  CheckBoxDelegate.cpp  CheckBoxDelegate.h  DoubleSpinBoxDelegate.cpp  DoubleSpinBoxDelegate.h  ForSale.cpp  ForSale.h  ForSale.ui  ImageDelegate.cpp  ImageDelegate.h  InStock.cpp  InStock.h  InStock.ui  LegSetTableView.cpp  LegSetTableView.h  LegSetTableView.ui  LegoSetImportDialog.cpp  LegoSetImportDialog.h  LegoSetImportDialog.ui  LegoSetSpinBoxDelegate.cpp  LegoSetSpinBoxDelegate.h  LineEditDelegate.cpp  LineEditDelegate.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Sold.cpp  Sold.h  Sold.ui  SpinBoxDelegate.cpp  SpinBoxDelegate.h  main.cpp
src/Applications/BrickMoneyDesktop/translations/: bm_de.ts  translations.qrc  updateTranslation.bat
src/Applications/BrickMoneyManager/: CMakeLists.txt  ConnectToDBDialog.cpp  ConnectToDBDialog.h  ConnectToDBDialog.ui  GenerateSln.bat  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/Applications/BrickMoneyQuick/BrickMoneyQuick/: CMakeLists.txt  TableModel.cpp  TableModel.h  main.qml
src/Applications/BrickMoneyWidget/: CMakeLists.txt  LegoSetModel.cpp  LegoSetModel.h  MainWindow.h  MainWindow.ui
src/Applications/DeleteRowFromTableView/DeleteRowFromTableView/: CMakeLists.txt  main.qml
src/Applications/ODBC_Example/: CMakeLists.txt  odbcsql.cpp
src/Applications/StoreAndRetrieveImageInSQLite/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/Applications/StoreAndRetrieveImageInSQLite/images/: Images.qrc
src/Applications/TableViewExample/TableViewExample/: CMakeLists.txt  TableModel.cpp  TableModel.h  main.qml
src/Applications/TableViewExample_Controls_1/: TableModel.cpp  main.cpp  main.qml
src/BrickMoneyDatabase/: BrickMoneyDatabase.csv
src/Modules/KDDockWidgets/: Build.bat  GenerateSln.bat
src/scripts/: env_cmake.bat  env_qt.bat
src/scripts/GenerateLegosetDatabase/: gen_lego_set_db.py  gen_lego_set_db_post.py  read_rrp_and_desc_de.py  validateBrickMoneyDatabase.py  validateYearBrickMoneyDatabase.py
src/scripts/GenerateLegosetDatabase/BrickMoneyDatabase/: BrickMoneyDatabase.csv  BrickMoneyDatabaseUp.csv
src/scripts/GenerateLegosetDatabase/BricksetDatabase/: sets.csv
